--- a/webview-ui/src/index.css
+++ b/webview-ui/src/index.css
@@ -19,3 +19,13 @@ body {
   font-size: var(--vscode-editor-font-size, 14px);
   font-weight: var(--vscode-editor-font-weight, normal);
 }
+
+
+input,
+textarea,
+select,
+button {
+    font-family: var(--vscode-editor-font-family, Consolas, 'Courier New', monospace);
+    font-size: var(--vscode-editor-font-size, 14px);
+    font-weight: var(--vscode-editor-font-weight, normal);
+}
